--- a/README.org
+++ b/README.org
@@ -27,6 +27,7 @@ with the name =bomb_prep=. Then practice defusing the bomb with
 
 * Some tips that might be helpful for the lab
 
+ - _read the bomblab handout carefully_
  - when you first enter the debugger, try command =info functions=
    to see all the functions of the program.
  - set a break point at each of the phases.
